--- a/crowdfunding/CSS/contributors.css
+++ b/crowdfunding/CSS/contributors.css
@@ -18,8 +18,8 @@
 }
 
 #contributors .cont-text h1{
-    font-size: 1.5em;
-    /* font-family: 'Satisfy', cursive; */
+    font-size: 2.5rem;
+    font-family: lato, sans-serif;
     color: rgb(0, 0, 0);
     width: 100%;
     text-align: left;
@@ -43,17 +43,17 @@
     display: flex;
     flex-wrap: wrap;
 
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
 
-    margin: 30px 0;
+    margin: 30px 60px;
 }
 
 .names ul li{
 
     list-style: none;
-    margin: 0 10px;
-    font-size: 30px;
+    margin: 7px 9px;
+    font-size: 1.4rem;
     font-family: lato, sans-serif;
     color: rgb(0, 0, 0);
 }
