--- a/crowdfunding/CSS/contributors.css
+++ b/crowdfunding/CSS/contributors.css
@@ -59,12 +59,33 @@
 }
 
 
-@media screen and (max-width:450px){
+@media screen and (max-width:798px){
+    #contributors{
+        display: block;
+    }
+
     #contributors .cont-text{
         margin-top: 60px;
     }
 
-    .names{
+    .names ul li{
 
+        list-style: none;
+        margin: 7px 9px;
+        font-size: 1.1rem;
+        font-family: lato, sans-serif;
+        color: rgb(0, 0, 0);
+    }
+
+    .names ul{
+        display: flex;
+        /* flex-wrap: wrap; */
+
+        flex-direction: column;
+    
+        align-items: flex-start;
+        justify-content: flex-start;
+    
+        margin: 30px 30px;
     }
 }
