--- a/src/style/sections/home.css
+++ b/src/style/sections/home.css
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: flex-start;
 
-    /* background-image: url(../../assets/Home/home-21.png); */
+    background-image: url(../../assets/Home/home-21.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
