--- a/src/style/components/indexbody.css
+++ b/src/style/components/indexbody.css
@@ -6,6 +6,14 @@
     box-sizing: border-box;
 }
 
+/* .navbar{
+    background-color: black!important;
+}
+
+.navbar a{
+    color: #fff!important;
+} */
+
 body{
     font-family: 'Montserrat', sans-serif; 
     transition: .25s ease-in-out 0s;
