--- a/src/style/sections/home.css
+++ b/src/style/sections/home.css
@@ -1,3 +1,4 @@
+
 .blocker{
     z-index: 100!important;
 }
@@ -24,16 +25,29 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    /* background-color: rgb(0, 0, 0); */
+
+    
 }
 
 #home .container .heading{
+
+
+    /* background-color: rgba(255, 255, 255, 0.829); */
+    padding: 50px 0 50px 60px;
+    /* width: 100%; */
+    margin-right: 60px;
+
     height: 100%;
     width: 50%;
-    padding-left: 60px;
+    /* margin-right: 300px; */
+    /* padding-left: 60px; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+
+    color: rgb(0, 0, 0);
 
     /* font-family: lato, sans-serif; */
 }
@@ -41,6 +55,13 @@
 #home .container .heading h1{
     font-size: 3.6rem;
     text-transform: capitalize;
+    padding: 0;
+    margin: 0;
+}
+
+#home .container .heading .small-heading{
+    font-size: 3rem;
+    text-transform: uppercase;
 }
 
 #home .container .heading span{
@@ -74,6 +95,7 @@
         height: 100%;
         width: 100%;
         padding-left: 30px;
+        margin-right: 0px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
